@@ -1,6 +1,15 @@
-## Getting Started
+# Team 19
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+## Getting Started
+Make sure you have Java, JavaFX, Gradle, and VSCode installed on your local machine.
+
+Step by step instructions for running the app:
+1. Within VSCode, go to the run and debug section and create a launch.json file.
+2. In the launch.json file, make sure to include the dependencies for JavaFX here for each configuration in a line that looks like "vmargs": "--module-path 'your-path-to/javafx-sdk-21/lib' --add-modules javafx.controls,javafx.fxml"
+3. In the run and debug section, first start the server by pressing the green arrow on the MyServer tab.
+4. Then, in the same area without stopping the server, press the green arrow on the App tab to start running the app.
+
+Good luck with your recipes!
 
 ## Folder Structure
 
